# slide-recorder

./: .gitignore  README.md  pyproject.toml
packaging/: SlideRecorder.spec  pyinstaller_entry.py
src/slide_recorder/: __init__.py  __main__.py  app.py  audio.py  storage.py  video.py  waveform.py
