[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "slide-recorder"
version = "0.1.0"
description = "Cross-platform desktop app for recording separate slide voiceovers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "imageio-ffmpeg>=0.6.0",
  "numpy>=1.26",
  "pymupdf>=1.27.2.3",
  "PySide6>=6.7",
]

[project.optional-dependencies]
package = ["pyinstaller>=6.0"]

[project.gui-scripts]
slide-recorder = "slide_recorder.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
